dawarich/tmp.yml
apiVersion: v1
kind: Pod
metadata:
  name: dawarich-db-migrate
spec:
  restartPolicy: Never
  containers:
    - name: migration-runner
      image: freikin/dawarich:1.8.1
      command: ["bin/rails", "db:migrate"]
      # Reuse the exact same environment variables/configmap/secrets your main deployment uses
