dawarich/database.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dawarich-postgis
  labels:
    app.kubernetes.io/name: postgis
    app.kubernetes.io/part-of: dawarich
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: postgis
      app.kubernetes.io/part-of: dawarich
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postgis
        app.kubernetes.io/part-of: dawarich
    spec:
      containers:
      - name: postgis
        image: postgis/postgis:17-3.5-alpine
        ports:
        - containerPort: 5432
        livenessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-dawarich_development}
          initialDelaySeconds: 30
          timeoutSeconds: 5
          periodSeconds: 10
          failureThreshold: 5
        volumeMounts:
        - name: dbdata
          mountPath: /var/lib/postgresql/data
          subPath: postgres-data
        - name: shared
          mountPath: /var/shared
        - name: dshm
          mountPath: /dev/shm
      volumes:
        - name: dbdata
          persistentVolumeClaim:
            claimName: dawarich-pvc-dbdata
        - name: shared
          persistentVolumeClaim:
            claimName: dawarich-pvc-shared
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 1G
---
apiVersion: v1
kind: Service
metadata:
  name: dawarich-svc-postgis
spec:
  selector:
    app.kubernetes.io/name: postgis
    app.kubernetes.io/part-of: dawarich
  ports:
    - protocol: TCP
      port: 5432
