dawarich/gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homelab-https-route
spec:
  parentRefs:
  - name: homelab-gateway
    sectionName: https-pieter-fish
    namespace: gateway
  
  hostnames:
  - "dawarich.pieter.fish" 
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: dawarich
      port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homelab-priv-wan-https-route
spec:
  parentRefs:
  - name: homelab-priv-wan-gateway
    sectionName: https-pieter-fish
    namespace: gateway
  
  hostnames:
  - "dawarich.pieter.fish" 
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: dawarich
      port: 3000
